--- a/login/static/login/style.css
+++ b/login/static/login/style.css
@@ -324,6 +324,9 @@ a.delete:hover {
 	#signUp .jumbotron {
 		background-size:auto 100%;
 	}
+	.h1, h1 {
+	    font-size: 32px;
+	}
 }
 
 @media screen and (max-width: 600px) {
